--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/banner.webp
+    - assets/
     - assets/burger/
+    - assets/pizza/
 
 
   #   - images/a_dot_ham.jpeg
